<resources>
    <string name="app_name">CSScheduleMaker</string>
    <string name="app_title">Computer Science Schedule Maker</string>
    <string name="WelcomeText">Welcome.</string>
    <string name="welcome_description">Below you can adjust your schedule for any semester. You can also add or remove semesters.</string>
    <string name="adjustButtonText">Adjust</string>
    <string name="deleteButtonText">Delete</string>
    <string name="add_semester_from_popup_window">Add a New Semester</string>
    <string name="semester_year_prompt">Year</string>
    <string name="semester_season_prompt">Semester Season</string>
    <string name="add_semester_button">Accept and Add</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="classAmountString">%2$d %1d$s</string>
    <string name="course_intermediate_title">Schedule Adjustment</string>
    <string name="course_intermediate_description">You may view your current schedule here. Additionally, you can add or remove courses.</string>
    <string name="add_course_intermediate">Add Course</string>
    <string name="course_type_title">Choose the type of course you would like to add:</string>
    <string name="go_to_this_type">Go</string>
    <string name="course_selection_title">Course Title</string>
    <string name="choose_course">Take</string>
    <string name="course_info">Info</string>
    <string name="add_semester_menuItem">Add a new Semester</string>
    <string name="help_menuItem">Example Schedule</string>
    <string name="pdf_menuItem">Export as PDF</string>
</resources>
