<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_semester_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/add_semester_popup_bg"
    tools:context=".AddSemesterPopupActivity">


    <Button
        android:id="@+id/add_semester_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/add_semester_button"
        app:layout_constraintEnd_toEndOf="@+id/sem_year_spinner"
        app:layout_constraintTop_toBottomOf="@+id/sem_year_spinner" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="#a52a2a"
        android:text="@string/cancelButtonText"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/sem_title_spinner"
        app:layout_constraintTop_toBottomOf="@+id/sem_title_spinner" />

    <Spinner
        android:id="@+id/sem_year_spinner"
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/add_semester_spinner_bg"
        android:drawSelectorOnTop="true"
        app:layout_constraintEnd_toEndOf="@+id/sem_add_title"
        app:layout_constraintStart_toEndOf="@+id/sem_title_spinner"
        app:layout_constraintTop_toBottomOf="@+id/sem_add_title" />

    <Spinner
        android:id="@+id/sem_title_spinner"
        android:layout_width="157dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/add_semester_spinner_bg"
        app:layout_constraintEnd_toStartOf="@+id/sem_year_spinner"
        app:layout_constraintStart_toStartOf="@+id/sem_add_title"
        app:layout_constraintTop_toBottomOf="@+id/sem_add_title" />

    <TextView
        android:id="@+id/sem_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/add_semester_from_popup_window"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>